test fix scroll on mobile canvas works

--- a/scss/components/_canvas.scss
+++ b/scss/components/_canvas.scss
@@ -8,4 +8,7 @@
   left: 0;
   right: 0;
   width: 100%;
+  canvas {
+    touch-action: auto !important;
+  }
 }
